--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@
 .idea/libraries/support_v4_22_2_1.xml
 .idea/workspace.xml
 .idea/libraries/appcompat_v7_22_2_1.xml
+.idea/workspace.xml
+.idea/libraries/appcompat_v7_22_2_1.xml
+.idea/libraries/appcompat_v7_22_2_1.xml
+.idea/libraries/appcompat_v7_22_2_1.xml
